--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Odin Blog project from NodeJS section of the Full Stack Javascript Course on The Odin Project by Mohammad Raffi Akbar"
+      content="Odin Blog API project from NodeJS section of the Full Stack Javascript Course on The Odin Project by Mohammad Raffi Akbar"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
